src/components/ProjectCard/ProjectCard.module.scss
@use '../../styles/animations';

.container {
  border-radius: 15px;
  background: #3d4452;
  width: 100%;

  @media (max-width: 1200px) {
    width: 100%;
  }
}

ul {
  list-style-type: none;
  display: flex;
}

.projectAttribute {
  margin-right: 10px;
  margin-bottom: 10px;
  border: 1px solid azure;
  border-radius: 20px;
  padding: 5px;
}

.title {
  margin-bottom: 5px;
}

.attributes {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  margin: 20px 0px;
}

.content {
  margin: 20px;
}

.image {
  border-radius: 15px;
  width: 100%;
}

.noshow {
  display: none;
}

